<resources>
    <string name="app_name">Cardus GIS</string>

    <string name="reset_route">Started a new branch.</string>
    <string name="layername_edges">Route segments layer</string>
    <string name="layername_mot">Point type map object layer</string>
    <string name="not_project_active">You don\'t have an active project yet.</string>
    <string name="cardinal_line">Line type map object layer</string>
    <string name="cardinal_polygon">Polygon type map object layer</string>
    <string name="no_topology_layer">The selected map object it is not a topological item.</string>

    <string name="seleccione_un_objeto_de_mapa">Select a map object type</string>
    <string name="panic">Panic button</string>
    <string name="work_session_not_active">Please, you must activate a work session</string>
    <string name="worker_have_not_active">The worker %s seem to be inactive in cardus cloud</string>
    <string name="work_session_view_label">Work sessions available </string>
    <string name="dashboard_worksession_action_description">Open work session list view</string>
    <string name="map_object_props_inspector_basic">Basic</string>
    <string name="map_object_props_inspector_defects">Defects</string>
    <string name="observation">Observation</string>
    <string name="map_object_props_inspector_states">States</string>
    <string name="map_object_props_inspector_attribute">Extra attributes</string>
    <string name="inspector_object_label_code">Code</string>
    <string name="inspector_object_grade">Grade</string>
    <string name="inspector_object_inventory">Inventory</string>
    <string name="inspector_object_type">Type</string>
    <string name="inspector_object_geometry">Geometry</string>
    <string name="inspector_object_observation">Observation</string>
    <string name="dashboard_msg_session">Sessions:  %d</string>
    <string name="select_one">Pick one</string>
    <string name="do_you_want_to_delete_this_map_object">Do you want to delete this map object?</string>
    <string name="done">Done</string>
    <string name="do_you_want_to_delete_this_image">Do you what to delete this image?</string>
    <string name="active_work_session">Session:  %s</string>
    <string name="taake_picture" translatable="false">Take Picture button</string>
    <string name="defect_icon_text" translatable="false">Defect icon descriptor</string>
    <string name="activity_defect_images_label">Photos to defect: %s</string>
    <string name="system_layers" translatable="false">System Layers</string>
    <string name="map_object_duplicate_code_messsage">Code %s its not available in this work session.</string>
    <string name="scan_map_object_barcode_message">Scan a map object barcode</string>
    <string name="barcode_notavailable_message">The code %s you scanned is not available or was already assigned in this work session.</string>
    <string name="barcode_scannig_error_message">The barcode could not be scanned. Please, verify that it is in CODE_128 format.</string>
    <string name="max_distance_threshold_broken_message">The above map object is more than %.2f meters away. Have you started a new branch?</string>
    <string name="map_object_saved_message">Map object saved</string>
    <string name="distance_tip_message">The distance from where you are going to insert the new point and the previous point defined by you is %.2f m.</string>
    <string name="max_distance_threshold_broken_message_edge">The above map object is more than %.2f meters away. Do you want to create a route segment anyway?</string>
    <string name="stats_session_view_label">Work session stats</string>
    <string name="km_covered">Route length: %.2f km</string>
    <string name="captured_points">Geolocated points: %d</string>
    <string name="map_object_incomplete_count">Incomplete: %d</string>
    <string name="gpslogging_stop_and_start_again">Could not start worker route logging. Stop the logging and restart it by checking the "Continue last logging" button.</string>
    <string name="obj_destination_completed">The target object is complete according to the degree defined for the node, increase the degree and retry the operation.</string>
    <string name="max_distance_threshold_broken_message_jointo">The selected map object is more than %.2f meters away. Do you want to dock them anyway?</string>
    <string name="delete_edge">Are you sure you want to delete this route segment?</string>
    <string name="title_activity_map_object_joined">%s Map Object Agregations</string>
    <string name="do_you_want_to_undock_this_map_object">Do you want to un-dock this map object?</string>
    <string name="map_object_already_docked_message">The selected map object is already docked to another map object.</string>
    <string name="map_object_already_docked_to_that_mapobject_message">The selected map object is already docked to this map object.</string>
    <string name="layername_jointo">Map object component layer</string>
    <string name="do_you_want_to_logout_this_work_session">Are you sure you want to logout? Please note that this process could not be undo.</string>
    <string name="version">Version %s</string>
    <string name="phibrainsoft" translatable="false">Cardinal Soft</string>
    <string name="derechos">All rights reserved</string>
    <string name="desarrollado_por">Developers:</string>
    <string name="autores1" translatable="false">Erodis Pérez Michel (eperezm1986@nauta.cu)</string>
    <string name="autores2" translatable="false">Daniel García Fernández (dgarciaf@nauta.cu)</string>
    <string name="select_layer">Cardinal selection layer</string>
    <string name="map_object_without_tag_mesagge">Composite mode?</string>
    <string name="map_object_aggregation_mode_actived_message">Component aggregation mode enabled</string>
    <string name="map_object_aggregation_mode_disabled_message">Component aggregation mode disabled</string>
    <string name="map_object_must_have_a_image_number_taken">Remember to take at least %d photos for the newly picked up coordinate</string>
    <string name="map_object_must_have_a_image_number_taken_exit_confirm">Are you sure you want to continue? Remember to take at least %d photos for the newly picked up coordinate</string>
    <string name="scanner">Scan</string>
    <!-- Preference Titles -->
    <string name="sync_header">Image synchronization</string>

    <!-- Sync Preferences -->
    <string name="images_download_title">Download images</string>
    <string name="images_download_summary_on">Automatically download images for incoming project</string>
    <string name="images_download_summary_off">Only download images when manually requested</string>

    <string name="images_upload_title">Upload images</string>
    <string name="images_upload_summary_on">Automatically upload images for outgoing project. Disable if you know what you are doing</string>
    <string name="images_upload_summary_off">Only upload images when manually requested</string>
    <string name="continue_fuck">Continue</string>
    <string name="layername_bifuration">Bifurcations</string>
    <string name="validating">Validating the session...</string>
    <string name="opetator_validation_failed">The worker %s could not be validated, check credentials</string>
    <string name="auto_sync">Auto sync</string>
    <string name="project_auto_upload_summary_off">Auto upload project only when manually requested</string>
    <string name="project_auto_upload_title">Self uploading to the cloud</string>
    <string name="project_auto_upload_summary_on">Automatically upload the project to the cloud. Disable if you know what you are doing</string>
    <string name="content_authority" translatable="false">cu.phibrain.cardinal.app</string>
    <string name="accountType" translatable="false">cu.phibrain.cardinal</string>
    <string name="permissions_needed">This permission is required for automatic synchronization</string>
    <string name="pref_title_sync_frequency">Frequency</string>
    <string name="sync_frequency_sumary">Configure the synchronization frequency</string>
    <string name="auto_sync_activated">The automatic upload to the cloud is enabled. To use this option disable it in the synchronization options</string>
    <string name="session_worker_not_match">The user(%s) set in the setup and the active user(%s) in the newly loaded database do not match</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Manual</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>300</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
        <item>0</item>
    </string-array>
    <string name="sync_started">Automatic synchronization of the project has been started</string>
    <string name="sync_stopped">Automatic synchronization of the project has been stopped</string>
    <string name="inspector_object_created_at">Created At</string>
</resources>
