<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_settings_primary_24dp"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_download_from_cloud"
            app:key="REFS_KEY_DOWNLOAD_CLOUD_IMAGES"
            app:summaryOff="@string/images_download_summary_off"
            app:summaryOn="@string/images_download_summary_on"
            app:title="@string/images_download_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_cloud_upload"
            app:key="REFS_KEY_UPLOAD_CLOUD_IMAGES"
            app:summaryOff="@string/images_upload_summary_off"
            app:summaryOn="@string/images_upload_summary_on"
            app:title="@string/images_upload_title" />

    </PreferenceCategory>

    <PreferenceCategory>
<!--        android:icon="@drawable/ic_sync_black24dp"-->
<!--        app:title="@string/auto_sync"-->


        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_cloud_upload"
            app:key="REFS_KEY_AUTO_SYNC_SESSION"
            app:summaryOff="@string/project_auto_upload_summary_off"
            app:summaryOn="@string/project_auto_upload_summary_on"
            app:title="@string/project_auto_upload_title" />

        <ListPreference
            android:defaultValue="0"
            android:dependency="REFS_KEY_AUTO_SYNC_SESSION"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="REFS_KEY_SYNC_FREQUENCY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/sync_frequency_sumary"
            android:title="@string/pref_title_sync_frequency" />

    </PreferenceCategory>

</PreferenceScreen>
