<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_start">

    <TextView
        android:id="@+id/tvalertPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/main_background"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvalertPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:text="@string/derechos"
            android:textColor="#ffffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="16dp"
            android:text="@string/desarrollado_por"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:text="@string/autores1"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/autores2"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvattabeira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/phibrainsoft"
        android:textAllCaps="false"
        android:textColor="@color/main_background"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>
