<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.SessionsStatsActivity">

    <LinearLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/GeopapTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/map_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/GeopapTheme.PopupOverlay" />


        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">
            <TextView
                android:id="@+id/tvKm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:text="@string/km_covered"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

<!--            <ImageButton-->
<!--                android:id="@+id/stats_gpslog_chart"-->
<!--                android:layout_width="@dimen/min_touch_size"-->
<!--                android:layout_height="@dimen/min_touch_size"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="@null"-->
<!--                app:srcCompat="@drawable/ic_chart_primary_24dp" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/tvCapturePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/captured_points"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIncompleteMO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:text="@string/map_object_incomplete_count"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/main_text_color"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/search_box_mo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_to_filter"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <ListView
                android:id="@+id/mapObjectsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:listitem="@layout/activity_sessions_stats_row" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
